Fix Unreal Only launch settings

--- a/Settings/Variant Settings/unreal-launch.properties
+++ b/Settings/Variant Settings/unreal-launch.properties
@@ -20,6 +20,6 @@ AutoOpenSolution=false
 # Automatically builds the editor from the solution when enabled
 AutoBuildEditor=true
 # Automatically opens the editor when enabled if it was automatically built
-AutoOpenEditor=trie
+AutoOpenEditor=true
 # Saves the source control and live coding configurations if enabled
 SaveEditorConfigs=true
